--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "lint": "eslint . "
+    "lint": "eslint . ",
+    "start": "node index.js",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,11 @@
     "jest": "^23.6.0"
   },
   "dependencies": {
-    "hex-to-binary": "^1.0.1"
+    "body-parser": "^1.19.0",
+    "cross-env": "^7.0.2",
+    "express": "^4.17.1",
+    "hex-to-binary": "^1.0.1",
+    "redis": "^3.0.2",
+    "request": "^2.88.2"
   }
 }
