--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node index.js",
     "dev-peer": "cross-env GENERATE_PEER_PORT='true' node index.js"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hoangthuc701/cryptochain.git"
@@ -29,9 +32,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cross-env": "^7.0.2",
+    "elliptic": "^6.5.3",
     "express": "^4.17.1",
     "hex-to-binary": "^1.0.1",
     "redis": "^3.0.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.3.0"
   }
 }
